# rewind

./: LICENSE  README.md  install.sh  pyproject.toml
docs/specs/: sort-picker.md
fixtures/: 2026-07-10-broken-example.md  2026-07-13-vault-tui-spike.md  2026-07-15-blendvision-logger-facade.md
rewind/: app.py  theme.py  update.py  vault.py
session_vault/: app.py  transcript.py  update.py  vault.py
skills/rewind-capture/: SKILL.md
skills/session-capture/: SKILL.md
tests/: conftest.py  test_app.py  test_transcript.py  test_update.py  test_vault.py
tests/fixtures/: 2026-07-10-broken-example.md  2026-07-13-vault-tui-spike.md  2026-07-15-logger-facade-prd.md
