[project]
name = "session-vault"
version = "0.1.0"
description = "TUI for browsing a session vault of deliberately archived Claude Code / opencode sessions"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "python-frontmatter>=1.1",
]

[project.scripts]
rewind = "session_vault.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["session_vault"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
