[project]
name = "rewind"
version = "0.1.0"
description = "Rewind: a TUI for browsing a vault of deliberately archived Claude Code / opencode sessions"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "python-frontmatter>=1.1",
]

[project.scripts]
rewind = "rewind.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rewind"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
